Review PDP and home page changes